--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.projectlombok:lombok:1.18.18'
     implementation 'junit:junit:4.13.1'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     annotationProcessor("org.projectlombok:lombok")
     compileOnly('org.projectlombok:lombok')
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
