--- a/kafka-docker/docker-compose.yml
+++ b/kafka-docker/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3'
 services:
   zookeeper:
     image: wurstmeister/zookeeper
-    container_name: zookeeper
+    container_name: zookeeper-bithumb
     ports:
       - "2181:2181"
   kafka:
     image: wurstmeister/kafka
-    container_name: kafka
+    container_name: kafka-bithumb
     ports:
       - "9092:9092"
     environment:
@@ -15,3 +15,21 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+  mongo:
+    image: "mongo:4.4.3"
+    container_name: mongo
+    restart: always
+    ports:
+      - 27017:27017
+    environment:
+      - MONGO_DATA_DIR=/data/db
+      - MONGO_LOG_DIR=/dev/null
+    volumes:
+      - ./data/db:/data/db
+  app:
+    build: .
+    restart: always
+    ports:
+      - 8080:8080
+    depends_on:
+      - mongo
