reactive Mongodb practice

--- a/kafka-docker/Dockerfile
+++ b/kafka-docker/Dockerfile
@@ -4,5 +4,5 @@ VOLUME /tmp
 ARG JAR_FILE=./build/libs/*.jar
 ADD ${JAR_FILE} app.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-Dspring.data.mongodb.uri=mongodb://192.168.5.32:27017/admin","-jar","app.jar"]
+ENTRYPOINT ["java","-Dspring.data.mongodb.uri=mongodb://localhost:27017/admin","-jar","app.jar"]
 
