--- a/kafka-reactive/src/main/resources/application.yml
+++ b/kafka-reactive/src/main/resources/application.yml
@@ -12,4 +12,8 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/admin
+
 
