--- a/reactivMongoPractice/src/main/resources/application.yml
+++ b/reactivMongoPractice/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/admin
+      database: test
+      host: localhost
+      port: 27017
+
