--- a/kafka-reactive/src/main/resources/application.yml
+++ b/kafka-reactive/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
 
   data:
     mongodb:
-      uri: mongodb://localhost:27017/admin
-
+      database: test
+      host: localhost
+      port: 27017
 
